@@ -1334,3 +1334,23 @@ ADLT_FREQUENT = 1
 ## KNOWNDESTCATEGORY used with ICustomDestinationList.AppendKnownCategory
 KDC_FREQUENT = 1
 KDC_RECENT = 2
+
+## LIBRARYFOLDERFILTER used with IShellLibrary.GetFolders
+LFF_FORCEFILESYSTEM = 1
+LFF_STORAGEITEMS = 2
+LFF_ALLITEMS = 3
+
+## DEFAULTSAVEFOLDERTYPE used with IShellLibrary.Get/SetDefaultSaveFolder
+DSFT_DETECT = 1
+DSFT_PRIVATE = 2
+DSFT_PUBLIC = 3
+
+## LIBRARYOPTIONFLAGS used with IShellLibrary.Get/SetOptions
+LOF_DEFAULT = 0
+LOF_PINNEDTONAVPANE = 1
+LOF_MASK_ALL = 1
+
+## LIBRARYSAVEFLAGS Used with PyIShellLibrary.Save
+LSF_FAILIFTHERE = 0
+LSF_OVERRIDEEXISTING = 1
+LSF_MAKEUNIQUENAME = 2
